test/fail/id-property.app
//Cannot override the builtin id property

application test

entity Test {

	id :: String
	
}

define page root() { }